--- a/index.html
+++ b/index.html
@@ -12,10 +12,54 @@
             margin: 0;
             padding: 0;
         }
+        #popupTitle{
+            left: 276px;
+            top: 127px;
+            font-size: 11px;
+            color: #fff;
+            display: none;
+        }
+        #popupText{
+            left: 275px;
+            top: 155px;
+            font-size: 12px;
+            text-align: justify;
+            width: 290px;
+            resize: none;
+            display: none;
+        }
+        #popupBtn{
+            position: absolute;
+            background-color: rgb(122, 122, 122);
+            border: 2px solid rgb(122, 122, 122);
+            transition: border 0.3s ease-in;
+            cursor: pointer;
+            color: #fff;
+            padding: 2px;
+            border-radius: 5px;
+            letter-spacing: .5px;
+            left: 370px;
+            top: 265px;
+            font-size: 12px;
+            width: 100px;
+            display: none;
+        }
+        .interface-text{
+            position: absolute;
+            background-color: transparent;
+            border: none;
+            letter-spacing: .5px;
+            outline: none;
+        }
     </style>
 </head>
 <body>
     <canvas id="canvas"></canvas>
+    <!--popup-->
+    <input type="text" id="popupTitle" value="Message" class="interface-text" readonly />
+    <textarea id="popupText" cols="30" rows="10" class="interface-text" readonly>
+    </textarea>
+    <input type="button" id="popupBtn" value="Ok" />
     <!--JSON-->
     <script src="./build/texts.json"></script>
     <!--Main Script-->
