--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             outline: none;
             color: #4D4D4D;
         }
+        canvas{
+            background: #000000;
+        }
     </style>
 </head>
 <body>
