--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
             color: #4D4D4D;
         }
         canvas{
-            background: #000000;
+            background: #cccccc;
+            display: block;
         }
     </style>
 </head>
