--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         *{
             margin: 0;
             padding: 0;
-            font-family: Calibri,sans-serif;
+            font-family: 'Calibri', sans-serif;
         }
         #popupTitle{
             left: 276px;
@@ -19,7 +19,7 @@
             font-size: 14px;
             color: #fff;
             display: none;
-            font-family: Calibri,sans-serif;
+            font-family: 'Calibri', sans-serif;
         }
         #popupText{
             left: 275px;
@@ -32,7 +32,7 @@
         }
         #popupBtn{
             appearance: none;
-            font-family: Calibri,sans-serif;
+            font-family: 'Calibri', sans-serif;
             position: absolute;
             background-color: #4D4D4D;
             border: 2px solid #A9A9A9;
@@ -61,6 +61,7 @@
             color: #4D4D4D;
         }
         canvas{
+            position: relative;
             background: #cccccc;
             display: block;
         }
@@ -69,12 +70,25 @@
             background-color: rgba(158, 158, 158, 0.6);
             pointer-events: none;
             border-radius: 50%;
+            top: -40px;
+            left: 375px;
+            width: 100px;
+            height: 100px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transform: translateY(20px);
+            text-transform: uppercase;
+            color: #3f52a3;
+        }
+        .d-none{
+            display: none !important;
         }
     </style>
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <!-- <div id="spot"></div> -->
+    <div id="spot">grab</div>
     <!--popup-->
     <input type="text" id="popupTitle" value="Message" class="interface-text" readonly />
     <textarea id="popupText" cols="30" rows="10" class="interface-text" readonly>
