--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             left: 375px;
             width: 100px;
             height: 100px;
-            display: flex;
+            display: none;
             justify-content: center;
             align-items: center;
             transform: translateY(20px);
@@ -83,6 +83,11 @@
         }
         .d-none{
             display: none !important;
+        }
+        @media screen and (max-width: 1024px) {
+            #spot{
+                display: flex;
+            }
         }
     </style>
 </head>
